Karthi/src/objects/Students__c.object
<CustomObject>
    <fields>
        <fullName>Student_Location__c</fullName>
        <label>Student Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Students__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Traning_Count__c</fullName>
        <label>Traning Count</label>
        <summaryFilterItems>
            <field>Training__c.Course__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </summaryFilterItems>
        <summaryForeignKey>Training__c.Stident__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>